--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>New York</title>
+    <title>OOO</title>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script>
       $(document).ready(function(){
